tests/conformance/errors/early_error_stack/input.dgm
def a() {
  undefined_var
}

a()
